NetworkPolicies/mysqlpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dbpod
  labels:
    name: mysqldb
    type: db-backend
spec:
  containers:
    - name: mysql
      image: mysql:5.6
  restartPolicy: OnFailure
