NetworkPolicies/npod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: naveenpod
  labels:
    name: webapp
    type: webapp-frontend
spec:
  containers:
    - name: naveen-nginx
      image: nginx
  restartPolicy: OnFailure
