NetworkPolicies/mysqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqlservice
  labels:
    name: mysql
    type: db-backend
spec:
  type: ClusterIP
  ports: 
    - targetPort: 3306
      port: 3306
  selector: 
    name: mysqldb
