NetworkPolicies/nservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: naveenwebservice
  labels:
    name: webapp
    type: webapp-frontend
spec:
  type: NodePort
  ports: 
    - targetPort: 80
      port: 80
      nodePort: 30006
  selector: 
    name: webapp
