NetworkPolicies/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: db-policy
spec: 
  podSelector:
    matchLabels:
      name: mysqldb
  policyTypes: 
    - Ingress
  ingress: 
    - from:
        - podSelector:
            matchLabels: 
              name: webapp
      ports: 
        - protocol: TCP
          port: 3306
